doctor forms and index page streamlined; daily_charts year/month filters added

--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -1,5 +1,4 @@
-<% provide(:title, 'All claims') 
-%>
+<% provide(:title, 'All claims') %>
 
 <%= form_with url: claims_index_path do |f| %>
   <div class="row form-control"> 
