--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -66,7 +66,9 @@ table {
     border-color: #E7E7E7;
     padding-left: 5px;
     padding-right: 5px;
+//    background-color: #444;
 }
+
 
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
