Doctor's pages moved to Ref section; Invoces filtered if user is doctor

--- a/app/views/layouts/_doc_navigation_links.html.erb
+++ b/app/views/layouts/_doc_navigation_links.html.erb
@@ -8,5 +8,5 @@
   <li class="<%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
   <%= render 'layouts/doc_billing' %>
   <%= render 'layouts/doc_docs' %>
-  <%= render 'layouts/ref' %>
+  <%= render 'layouts/doc_ref' %>
   <%= render 'layouts/forms' %>
