--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All doctors') %>
 <%= render "shared/modal", size: 'lg' %>
 
-<table class="tbl table-hover"> 
+<table class="tbl2 table-hover table-striped table-bordered" >
   <thead>
       <tr>
           <th class='tbl_lmd'>Name</th>
@@ -13,10 +13,8 @@
 	  <th class='tbl_lg'> Address</th>
           <th class='tbl_md'>City</th>
           <th>Phone </th>
-	  <% unless current_user.doctor? %>
-	      <th class='tbl_sm'> </th>
-	  <% end %>
 	  <% if  current_user.admin?  %>
+	      <th class='tbl_sm'> </th>
 	      <th class='tbl_sm'> </th>
 	  <% end %>
       </tr>
