--- a/app/views/layouts/_doc_docs.html.erb
+++ b/app/views/layouts/_doc_docs.html.erb
@@ -3,6 +3,6 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Docs <b class="caret"></b> </a>
   <ul class="dropdown-menu">
      <li><%= link_to "Reports", reports_path %></li>
-     <li> <%= link_to "Pay Stubs", paystubs_path, method: :get %> </li>
+     <li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
   </ul>
 </li>
