--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -76,12 +76,12 @@
         <table class="tbl">
   	  <thead>
 	  <tr>
-	    <th class="tbl_xlg">Date</th>
-	    <th> </th>
-	    <th class="tbl_lg">Doctor</th>
-	    <th>Diagnosis</th>
-	    <th class="tbl_xlg">Svcs</th>
-	    <th>Status</th>
+	    <th>Date</th>
+	    <th class="tbl_md"></th>
+	    <th>Doctor</th>
+	    <th class="tbl_md">Diag.</th>
+	    <th>Svcs</th>
+	    <th class="tbl_md">Status</th>
 	  </tr>
 	  <tbody>
 
