--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -14,7 +14,7 @@
 	  <th>Eff. Date</th>
 	  <th class='tbl_sm'><%= sortable 'active' %></th>
 	  <% unless current_user.doctor? %>
-	  <th class='tbl_sm'></th>
+	  <th class="tbl_sm"></th>
 	  <% end %>
 	  <% if current_user.admin? %>
 	  <th class='tbl_sm'></th>
