--- a/app/views/providers/_provider.html.erb
+++ b/app/views/providers/_provider.html.erb
@@ -14,15 +14,15 @@
 	<% unless current_user.doctor? %>
 	<td>
         <% if remote %>
-          <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_provider_path(provider), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
+          <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_provider_path(provider), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
         <% else %>
-          <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_provider_path(provider) %>
+          <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_provider_path(provider) %>
         <% end %>
 	</td>
 	<% end %>
 
   	<% if current_user.admin?  %>
-	<td> <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, provider, method: :delete, data: { confirm: "Are you sure you want to delete #{provider.name}?" } %> </td>
+	<td> <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, provider, method: :delete, data: { confirm: "Are you sure you want to delete #{provider.name}?" } %> </td>
 	<% end %>
      </tr>
 
