--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,8 @@
 	  <th>Active?</th>
 	  <th>Created</th>
 	  <th>Updated</th>
-	  <th class='tbl_md'></th>
+	  <th class='tbl_md'>Switch To</th>
+	  <th class='tbl_sm'>Del</th>
       </tr>
   </thead>
   <tbody>
