--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -46,9 +46,9 @@
 	  <td><%= link_to '<i class="glyphicon glyphicon-file"></i>'.html_safe, visitform_patient_visit_path(pat,visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get'  %></td>
 	  <td>
 	  <% if remote %>
-	    <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_patient_visit_path(pat,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
+	    <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(pat,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
           <% else %>
-	    <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_patient_visit_path(pat,visit) %>
+	    <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_visit_path(pat,visit) %>
           <% end %>
 	  </td>
   	<% else %>
@@ -57,6 +57,6 @@
 	<% end %>
 
 	<% if current_user.admin? %>
-	    <td><%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, patient_visit_path(pat,visit), method: :delete, data: { confirm: "Are you sure you want to delete visit #{visit.id} for patient #{pat.lname}?" } %> </td>
+	    <td><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, patient_visit_path(pat,visit), method: :delete, data: { confirm: "Are you sure you want to delete visit #{visit.id} for patient #{pat.lname}?" } %> </td>
         <% end %>
 </tr>
