--- a/app/views/edt_files/_edt_file.html.erb
+++ b/app/views/edt_files/_edt_file.html.erb
@@ -23,6 +23,6 @@
 	   <td><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_edt_file_path(edt_file)  %></td>
 	<% end %>
   	<% if current_user.admin?  %>
-	   <td> <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, edt_file, method: :delete, data: { confirm: "Are you sure you want to delete #{edt_file.filename}?" } %> </td>
+	   <td> <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, edt_file, method: :delete, data: { confirm: "Are you sure you want to delete #{edt_file.filename}?" } %> </td>
 	<% end %>
      </tr>
