--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -11,10 +11,10 @@
 	<td><%= form.fillable_str %></td>
 	<td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_form_path(form) %></td> 
 	<% unless current_user.doctor? %>
-	  <td><%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_form_path(form) %></td>
+	  <td><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_form_path(form) %></td>
 	<% end %>
 	<% if current_user.admin?  %>
-  	  <td><%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, form, method: :delete, data: { confirm: "Are you sure you want to delete #{form.name}?" } %></td>
+  	  <td><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, form, method: :delete, data: { confirm: "Are you sure you want to delete #{form.name}?" } %></td>
         <% end %>
 	</td>
      </tr>
