--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -18,7 +18,7 @@
 
 
   	<% if current_user.admin?  %>
-		<td>  <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, patient, method: :delete, data: { confirm: "Are you sure you want to delete #{patient.lname}?" } %>  </td> 
+          <td>  <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, patient, method: :delete, data: { confirm: "Are you sure you want to delete #{patient.lname}?" } %>  </td> 
 	<% end %>
 
      </tr>
