pager parameter added; security update to loofah gem

--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -48,5 +48,5 @@
 </table>
 
 <div class="bottom_buttons ">
-<%= will_paginate @claims, params: {filter_doc_id: @doc_id}, class: "btn" %> 
+<%= will_paginate @claims, params: {filter_doc_id: @doc_id, adjusted: @adjusted}, class: "btn" %> 
 </div>
