--- a/app/views/paystubs/new.html.erb
+++ b/app/views/paystubs/new.html.erb
@@ -2,6 +2,6 @@
 <% provide(:button_text, "Generate Paystub") %>
 
 <div class="col-sm-8 col-sm-offset-2">
-   <h3 class='display-1'>Create Paystub for <%= Time.now.prev_month.strftime("%B %Y") %></h3>
+<h3 class='display-1'>Create <%= Time.now.strftime("%B") %> Paystub </h3>
     <%= render 'form' %>
 </div>
