--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, @patient.full_name) %>
 <%= render "shared/modal", size:'lg' %>
+<% remote = device_is_desktop? %>
 
 	<h1><%= @patient.full_name %> :  Patient profile </h1>
 
@@ -29,8 +30,49 @@
 	<b>Medications</b>: <%= @patient.medications  %>
 	<% end %>
          </pre>
+
+        <% if @patient.invoices.any? %>
+	<b>Invoices </b>
+	 <div class="panel panel-info">
+	   <div class="patient-invoices-panel-body">
+	     <table class="tbl2 table-hover table-bordered">
+		<th>  </th><th>To</th><th>Date</th><th>Amount</th><th>Paid?</th>
+		<% @patient.invoices.each do |i| %>
+		<tr>
+		  <td><%= link_to "Invoice #{i.id}", invoice_path(i), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+		  <td> <%= i.billto_str %> </td> 
+		  <td> <%= i.date %> </td> 
+		  <td> <%= sprintf("$%.2f",i.amount) %> </td> 
+		  <td> <%= i.paid_str %> </td> 
+		</tr>
+		<% end %>
+	     </table>
+	   </div>
+	 </div>
+	<% end %>
+	
+        <% if @patient.letters.any? %>
+	<b>Letters </b>
+	 <div class="panel panel-info">
+	   <div class="patient-letters-panel-body">
+	     <table class="table-hover table-bordered">
+		     <th>  </th><th>From</th><th>To</th><th>Date</th><th>Title</th>
+		<% @patient.letters.each do |letter| %>
+		<tr>
+		  <td><%= link_to "Letter #{letter.id}", letter_path(letter), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+		  <td> <%= letter.from %> </td> 
+		  <td> <%= letter.to %> </td> 
+		  <td> <%= letter.date %> </td> 
+		  <td> <%= letter.title %> </td> 
+		</tr>
+		<% end %>
+	     </table>
+	   </div>
+	 </div>
+	<% end %>
 	 
 	 <% if @patient.notes.present? %> 
+	 <b>Notes</b>
 	 <div class="panel panel-info">
 	   <div class="patient-notes-panel-body">
 		   <% html_str = "<pre class='notes'> #{@patient.notes} </pre>" %>
@@ -41,10 +83,9 @@
     </section>
 
 <div class="row">
-  <% remote = device_is_desktop? %>
 
 <% unless @patient.pat_type == DECEASED_PATIENT %>
-  <div id="new_visit" class="col-sm-3">
+  <div id="new_visit" class="col-sm-2">
   <% if remote %>
      <%= button_to 'New Visit', new_patient_visit_path(@patient), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window',class:"btn btn-primary", method: 'get'  %> </td>
   <% else %>
@@ -53,21 +94,23 @@
   </div>
 <% end %>
 
-  <div id="edit_pat" class="col-sm-3">
+  <div id="edit_pat" class="col-sm-2">
     <%= button_to "Edit Patient", edit_patient_path(@patient), remote: remote, 'data-toggle': "modal", 'data-target': '#modal-window', class:"btn btn-primary", method: 'get' %>
   </div>
 
-  <div id="modLabel" class="col-sm-3">
+  <div id="modLabel" class="col-sm-2">
   <%= button_to "Label", label_patient_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  class:"btn btn-primary clickable", method: 'get'  %>
   </div>
   
-  <div id="invoice" class="col-sm-3">
+  <div id="invoice" class="col-sm-2">
     <%= button_to "Invoice", new_patient_invoice_path(@patient), class: "btn btn-primary", method: 'get' %> 
   </div>
-
+  
+  <div id="invoice" class="col-sm-2">
+    <%= button_to "Letter", new_patient_letter_path(@patient), class: "btn btn-primary", method: 'get' %> 
+  </div>
 
 </div>
-
   </aside>
 
   <div class="col-md-6">
