--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 <img src='/images/clinic.jpg' width="430px"></img>
 </div>
 
-<div class="hdr-text">We are open every day!</div>
+<div class="hdr-text">We are open every day!  </div> 
 </p>
 <p style="font-size: 13px">
 <pre>
@@ -76,4 +76,6 @@ Thursdays: 9 AM - 2PM
 
 <div align="right" style="padding:0; margin:0">
 <img src='/images/map.png' width="230px"></img>
+<div class="caption-text"><a href="https://medimap.ca/Stoney-Creek-Medical-Walk-In-Clinic" target="_new">Show current Wait Time</a></div>
 </div>
+
