--- a/app/views/referrals/index.html.erb
+++ b/app/views/referrals/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'All Letters') %>
+<% provide(:title, 'All Referrals') %>
 <%= render 'shared/modal' %>
 
 <table class="tbl table-hover" >
@@ -6,21 +6,21 @@
       <tr>
 	  <th class="tbl_sm"><%= sortable 'id', '#' %> </th>
 	  <th class="tbl_md"><%= sortable 'patient_id', 'Re: Patient' %></th>
-	  <th class="tbl_lmd">From</th>
+	  <th> <%= sortable 'date' %></th>
+	  <th class="tbl_lmd">Ref. Doctor</th>
 	  <th class="tbl_lmd">To</th>
 	  <th class="tbl_lmd">Address</th>
-	  <th class="tbl_lg">Title</th>
-	  <th> <%= sortable 'date' %></th>
+	  <th class="tbl_lmd">Phone</th>
 	  <th class="tbl_sm"></th>
 	  <th class="tbl_sm"></th>
 	  <th class="tbl_sm"></th>
       </tr>
   </thead>
   <tbody>
-  <%= render @letters, remote: device_is_desktop? %>
+  <%= render @referrals, remote: device_is_desktop? %>
   </tbody>
 </table>
 
 <div class="bottom_buttons ">
-<%= will_paginate @letters, class: "btn" %>
+<%= will_paginate @referrals, class: "btn" %>
 </div>
