--- a/app/views/layouts/_docs.html.erb
+++ b/app/views/layouts/_docs.html.erb
@@ -5,6 +5,7 @@
      <li><%= link_to "Reports", reports_path %></li>
      <li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
      <li> <%= link_to "Letters", letters_path, method: :get %> </li>
+     <li> <%= link_to "Referrals", referrals_path, method: :get %> </li>
      <li> <%= link_to "Daily Charts", daily_charts_path, method: :get %> </li>
   </ul>
 </li>
