--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -12,13 +12,12 @@
           <th class="tbl_sm">Age</th>
 	  <th class="tbl_sm">Type</th> 
 	  <th class="tbl_md">Last Visit </th>
-	  <th class="tbl_sm">Visits</th>
           <th>HC/IFH #</th>
 	  <th>Expiry</th> 
 	  <th>DOB</th> 
           <th>Phone</th>
  	  <th class="tbl_sm">Lbl</th>
-          <th class="tbl_sm"></th>
+          <th class="tbl_sm">Chrt</th>
 	  <%= "<th class='tbl_sm'></th>".html_safe if current_user.admin? %>
       </tr>
   </thead>
@@ -36,3 +35,4 @@
 <% end %>
 </div>
 </div>
+
