--- a/app/views/referrals/_form.html.erb
+++ b/app/views/referrals/_form.html.erb
@@ -46,6 +46,12 @@
 </div>
 
 <div class="row">
+  <div class="col-sm-6">   
+    <%= f.input :app_date, html5: true, label: 'Appointment Date' %>
+  </div>
+</div>
+
+<div class="row">
   <div class="col-sm-12"> 
      <%= f.submit yield(:button_text), class: "btn btn-primary" %> 
   </div>
