--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -5,16 +5,18 @@
   <thead>
       <tr>
           <th class='tbl_lmd'>Name</th>
-          <th class='tbl_sm'>Type</th>
+          <th class='tbl_sm'>District</th>
           <th class='tbl_sm'>Spec.</th>
           <th>Provider#</th>
           <th>Group#</th>
+	  <th>WSIB#</th>
           <th class='tbl_sm'>Bills?</th>
 	  <th class='tbl_lg'> Address</th>
           <th class='tbl_md'>City</th>
           <th>Phone </th>
+          <th>New Pat? </th>
+	  <th class='tbl_sm'> </th>
 	  <% if  current_user.admin?  %>
-	      <th class='tbl_sm'> </th>
 	      <th class='tbl_sm'> </th>
 	  <% end %>
       </tr>
