--- a/app/views/doctors/_doctor.html.erb
+++ b/app/views/doctors/_doctor.html.erb
@@ -4,24 +4,26 @@
         <% else %>
 	  <td><%= link_to "#{doctor.full_name}", doctor %> </td>
   	<% end %>
-	<td><%= doctor.ph_type %></td> 
+	<td><%= doctor.district %></td> 
 	<td><%= doctor.specialty %></td>
 	<td><%= doctor.provider_no %> </td>
 	<td><%= doctor.group_no %> </td> 
+	<td><%= doctor.wsib_num %> </td> 
 	<td><%= doctor.bills_str %> </td> 
 	<td><%= doctor.address %> </td> 
 	<td><%= doctor.city %> </td> 
 	<td><%= doctor.phone %> </td> 
+	<td><%= doctor.accepts_str %> </td> 
 
-	<% if current_user.admin? %>
-	  <td>
+	<td>
           <% if remote %>
             <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_doctor_path(doctor), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
           <% else %>
             <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_doctor_path(doctor) %>
           <% end %>
-          </td>
+         </td>
 
+	<% if current_user.admin? %>
 	  <td> <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, doctor, method: :delete, data: { confirm: "Are you sure you want to delete doctor #{doctor.full_name} ?" } %> </td>
   	<% end %>
 
