--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -28,7 +28,7 @@
 
 <!-- Row 2 -->
 <div class="row">
-  <div class="col-sm-3" id="maiden_name", style="display:none;">
+  <div class="col-sm-3" id="maiden_name">
   <%= f.input :maid_name %>
   </div>
   
@@ -51,7 +51,7 @@
   </div>
   
   <div class="col-sm-3">
-     <%= f.input :hin_expiry, as: :date, start_year: Date.today.year, end_year: Date.today.year+5, html5: true, label: "Expires On", hint: 'Required *' %>
+     <%= f.input :hin_expiry, start_year: Date.today.year, end_year: Date.today.year+5, html5: true, label: "Expires On", hint: 'Required *' %>
   </div>
   
   <div class="col-sm-3">
