--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -17,8 +17,9 @@
 	  <th>DOB</th> 
           <th>Phone</th>
  	  <th class="tbl_sm">Lbl</th>
-          <th class="tbl_sm">Chrt</th>
+ 	  <th class="tbl_sm"></th>
 	  <%= "<th class='tbl_sm'></th>".html_safe if current_user.admin? %>
+          <th class="tbl_sm">Chrt</th>
       </tr>
   </thead>
   <tbody>
